syntax = "proto3";

package runner.v1;

option go_package = "github.com/supallm/core/proto/runner/v1;runnerv1";

service WorkflowRunner {
  rpc ExecuteWorkflow(ExecuteWorkflowRequest) returns (stream ExecutionEvent) {}
  rpc ValidateWorkflow(ValidateWorkflowRequest)
      returns (ValidateWorkflowResponse) {}
}

message ExecuteWorkflowRequest {
  string session_id = 1;
  string workflow_id = 2;
  string computed_workflow_json = 3;
  string inputs_json = 4;
}

message ExecutionEvent {
  string type = 1;
  string workflow_id = 2;
  string session_id = 3;
  string node_id = 4;
  string message = 5;
  string data_json = 6;
  string timestamp = 7;
}

message ValidateWorkflowRequest {
  string workflow_id = 1;
  string session_id = 2;
  string workflow_json = 3;
}

message ValidateWorkflowResponse { string computed_workflow_json = 1; }